# FiveDollars

./: .gitignore  AGENTS.md  README.md  index.html  latest.json  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release-macos.yml  release.yml
client/: README.md  index.html  package-lock.json  package.json  projeto-infos.md  tsconfig.tsbuildinfo  vite.config.js
client/src/: App.css  App.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
docs/: FRONTEND.md  GITHUB_WORKFLOW.md  TAURI_BACKEND.md  UPDATER_SETUP.md
scripts/: bump-version.cjs  unpatch-version.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  BodyEditor.tsx  Card.tsx  CollectionTree.tsx  ConfirmModal.tsx  Dropdown.tsx  EnvironmentEditor.tsx  Export.tsx  HttpMethodBadge.tsx  Main.tsx  RequestPanel.tsx  ResizableMainArea.tsx  ResizableSidebar.tsx  ResponsePanel.tsx  RunnerConfigModal.tsx  RunnerConfigPanel.tsx  RunnerContent.tsx  RunnerModal.tsx  RunnerPanel.tsx  SaveRequestModal.tsx  Sidebar.tsx  TabBar.tsx  VariableHighlightInput.tsx  VariablePreview.tsx
src/lib/: collectionTreeUtils.ts  exportPostmanV21.ts  http.ts  id.ts  importCollection.ts  parseInsomnia.ts  parsePostmanV21.ts  persistence.ts  resolveEnv.ts  runPostResponseScript.ts  utils.ts  (+4 more)
(+27 files in other folders)
