[package]
name = "five-dollar-post"
version = "0.1.0"
description = "Cliente HTTP desktop - alternativa ao Postman/Insomnia"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
